# Hidden-Variables

./: .gitignore  AICW- Science Spoke.docx  README.md  api.py  basic.py  explainability.py  main.py  pyproject.toml  requirement.txt  requirements.txt  streamlit_ui.py  vector.py  vectorization.py  ~$AICW-student showcase.pptx
chroma_langchain_db/: chroma.sqlite3
